use hint